cmake_minimum_required(VERSION 3.3)
project(MD-editor)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
#set(CMAKE_CXX_STANDARD_REQUIRED on)
set(SOURCE_FILES main.cpp)
add_executable(MD-editor ${SOURCE_FILES})

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtkmm-4.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

TARGET_LINK_LIBRARIES(MD-editor ${GTK3_LIBRARIES})